# pulga-zephyr

./: .gitignore  README.md  west.yml
app/: .gitignore  CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml  sysbuild.conf
app/boards/: pulga.overlay
app/src/: main.c
app/src/communication/: comm_ble_peripheral.c  comm_interface.c  comm_interface.h  shell_commands.c
app/src/communication/ble/: ble_interface.c  ble_interface.h
app/src/communication/bluetooth/: comm_ble_peripheral.c  comm_ble_service.c  comm_ble_service.h  comm_interface.c  comm_interface.h
app/src/communication/lora/: lora_common.c  lora_common.h
app/src/communication/lora/internal_buffer/: internal_buffer.c  internal_buffer.h
app/src/communication/lora/lora_device/: lora_device.c  lora_device.h
app/src/communication/lora/lora_device/lora_p2p_device/: lora_p2p_device.c  lora_p2p_device.h
app/src/communication/lora/lora_device/lorawan_device/: lorawan_device.c  lorawan_device.h
app/src/communication/lora/lora_p2p/: lora_p2p_interface.c  lora_p2p_interface.h
app/src/communication/lora/lorawan/: lorawan_interface.c  lorawan_interface.h  lorawan_keys_example copy.h  lorawan_keys_example.h  lorawan_setup.c
app/src/communication/lora_p2p/: lora_p2p_interface.c  lora_p2p_interface.h
app/src/communication/lorawan/: lorawan_buffer.c  lorawan_interface.c  lorawan_interface.h  lorawan_keys_example.h  lorawan_setup.c
app/src/communication/lorawan/lorawan_buffer/: lorawan_buffer.c  lorawan_buffer.h
app/src/communication/uart/: shell_commands.c  shell_commands.h  uart_interface.c  uart_interface.h
app/src/data_processing/: data_abstraction.c  data_abstraction.h  data_buffer.c
app/src/data_processing/bme280/: bme280_model.c  bme280_model.h
app/src/data_processing/si1133/: si1133_model.c  si1133_model.h
app/src/data_processing/text_model/: text_model.c  text_model.h
app/src/integration/data_abstraction/: abstraction_service.c  abstraction_service.h
app/src/integration/data_abstraction/text_model/: text_model.c  text_model.h
app/src/integration/data_buffer/: buffer_service.c  buffer_service.h
app/src/integration/timestamp/: timestamp_service.c  timestamp_service.h
app/src/sensors/: sensors_interface.c  sensors_interface.h
app/src/sensors/bme280/: CMakeLists.txt  bme280_model.c  bme280_service.c  bme280_service.h
app/src/sensors/bme280/zcbor/: bme280.cddl  bme280.cmake  bme280_encode.c  bme280_encode.h  bme280_encode_types.h  bme280_types.h
app/src/sensors/bme680/: bme680_model.c  bme680_service.c  bme680_service.h
app/src/sensors/bmi160/: bmi160_model.c  bmi160_service.c  bmi160_service.h
app/src/sensors/l86_m33/: CMakeLists.txt  gnss_model.c  l86_m33_service.c  l86_m33_service.h
app/src/sensors/l86_m33/zcbor/: l86_m33.cddl  l86_m33.cmake  l86_m33_encode.c  l86_m33_encode.h  l86_m33_encode_types.h
app/src/sensors/scd30/: scd30_model.c  scd30_service.c  scd30_service.h
app/src/sensors/si1133/: si1133_model.c  si1133_service.c  si1133_service.h
app/src/sensors/tcs34725/: tcs34725_model.c  tcs34725_service.c  tcs34725_service.h
app/src/sensors/vbatt/: vbatt_model.c  vbatt_service.c  vbatt_service.h
app/sysbuild/: mcuboot.conf
boards/caninos/pulga/: Kconfig  Kconfig.pulga  board.yml  pulga-pinctrl.dtsi  pulga.dts  pulga.yaml  pulga_defconfig
boards/shields/bme680/: Kconfig.defconfig  Kconfig.shield  bme680.overlay
boards/shields/pulga-gps/: Kconfig.shield  pulga-gps.overlay
boards/shields/pulga-lora/: Kconfig.defconfig  Kconfig.shield  pulga-lora.overlay
boards/shields/pulga_gps/: Kconfig.defconfig  Kconfig.shield  pulga_gps.overlay
boards/shields/pulga_lora/: Kconfig.shield  pulga_lora.overlay
boards/shields/pulga_vbatt/: Kconfig.defconfig  Kconfig.shield  pulga_vbatt.overlay
boards/shields/scd30/: Kconfig.defconfig  Kconfig.shield  scd30.overlay
boards/shields/tcs34725/: Kconfig.defconfig  Kconfig.shield  scd30.overlay  tcs34725.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/gnss/: CMakeLists.txt  Kconfig  Kconfig.quectel_l86  gnss_quectel_l86.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/scd30/: CMakeLists.txt  Kconfig  scd30.c  scd30.h  scd30_priv.h
drivers/sensor/si1133/: CMakeLists.txt  Kconfig  si1133.c  si1133.h  si1133_priv.h
drivers/sensor/tcs34725/: CMakeLists.txt  Kconfig  tcs34725.c  tcs34725_priv.h
dts/bindings/gnss/: quectel,l86.yaml
dts/bindings/sensor/: ams,tcs34725.yaml  sensirion,scd30.yaml
include/drivers/: scd30.h  si1133.h  tcs34725.h
samples/IoTrees_tutorial/: tutorial.md
samples/blinky/: prj.conf
samples/iotrees_calibration/: CMakeLists.txt  Kconfig  prj.conf
samples/iotrees_calibration/boards/: pulga.overlay
samples/iotrees_calibration/src/: main.c
samples/iotrees_calibration/src/bme280/: bme280_setup.c  bme280_setup.h
samples/iotrees_calibration/src/scd30/: scd30_calibration.c  scd30_calibration.h  scd30_setup.c  scd30_setup.h
samples/lora-receive/: CMakeLists.txt
samples/lora-receive-p2p/: CMakeLists.txt  README.rst
samples/lora-receive-p2p/src/: main.c
samples/lora-receive/src/: main.c
samples/lora-send/: prj.conf
samples/lora-send-p2p/: README.rst
samples/lora-send-p2p/src/: main.c
samples/lora-send/src/: main.c
samples/lorawan-class-a-abp/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/lorawan-class-a-abp/src/: main.c
samples/test_sleep_consumption/: CMakeLists.txt  prj.conf  sample.yaml
samples/test_sleep_consumption/src/: main.c
samples/uart-bootloader-sample/: .gitignore  CMakeLists.txt  README.rst  prj.conf
samples/uart-bootloader-sample/conf/mcuboot/: mcuboot.conf  mcuboot.overlay
